# lg-reminder-win

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: c-cpp.yml
packer/: packer.bat
packer/res/: lg-reminder.cpp  lg-reminder.rc
res/: lg-reminder.cpp  lg-reminder.rc
